static/styles.css
/*hero cta align center*/
@media only screen and (max-width: 900px){
    #hero-banner{
        flex-direction:column !important;
        display:none !important;
    }
}

@media only screen and (max-width: 900px){
    #hero-banner-alt{
        flex-direction:column !important;
        display: flex !important;
    }
    
}

/*bg img navbar mobile responsiveness*/
@media only screen and (max-width: 750px){
    #bg-img{
        background-size:contain !important;
        background-position: top !important;
        background-attachment: scroll !important;
    }
    #order_summary{
        font-size: 1em !important;
    }
    #height-img-mobile{
        min-height: 0px !important;
    }
    #individualsection{
        padding: 0px !important;
    }
    #packagesection{
        padding: 0px !important;
    }
    .home-page-points{
        vertical-align: top !important;
    }
}

/*bg img navbar mobile responsiveness*/
@media only screen and (max-width: 600px){
    #login-title-mobile{
        display: inline-block !important;
    }
    #register-title-mobile{
        display: inline-block !important;
    }
    .blog-content-item{
        width: 350px !important;
    }
    .blog-content-img{
        height: 233px !important;
        width: 350px !important;
    }
    #about-blog-section{
        border: 1px #ec4e20 solid !important;
        padding-left: 0 !important;
    }
    .blog-content-post-img{
        width: 370px !important;
        height:292px !important;
    }
    .blog-content-post-img-2{
        width: 370px !important;
        height:555px !important;
    }
    .blog-content-info{
        width: 370px;
    }
}

/* navbar link hover and transition features */

.nav-link{
    color:white;
    transition-duration: 0.5s;
    transition-timing-function: ease-in-out;
    margin-left:15px;
}

.nav-link:hover{
    color:#ec4e20 !important;
}

#s-nav-link{
    color:white;
    transition-duration: 0.5s;
    transition-timing-function: ease-in-out;
    margin-left:15px;
    text-align: center;
}

#s-nav-link:hover{
    color:white !important;
    background-color: rgb(234, 130, 32) !important;
    text-align: center;
}


/* same hover function for contact form submit button but remove margin-left*/
#contact-form-link{
    color:white;
    transition-duration: 0.5s;
    transition-timing-function: ease-in-out;
    text-align: center;
}

#contact-form-link:hover{
    color:white !important;
    background-color: rgb(234, 130, 32) !important;
    text-align: center;
}

.navbar-brand{
    color: white;
    transition-duration: 0.5s;
    transition-timing-function: ease-in-out;
}
.navbar-brand:hover{
    color:#ec4e20 !important;
}

/* call-to-action button hover and transition features */

#cta{
    background-color: #ffd23f;
    transition-duration: 0.5s;
    transition-timing-function: ease-in-out;
    border-radius: 5px;
}
#cta:hover{
    background-color: #d1ac34 !important;
}

/* call-to-action button hover and transition features */

.basket-btn{
    background-color: #ec4e20;
    border-color: #ec4e20;
    transition-duration: 0.5s;
    transition-timing-function: ease-in-out;
}

.basket-btn:hover{
    background-color: #f17e5c;
    border-color: #f17e5c;
}

/* login button hover and transition features */

#login-btn{
    color: black;
    background-color: #ffd23f;
    transition-duration: 0.5s;
    transition-timing-function: ease-in-out;
    border-radius: 5px;
    border-color: #ffd23f;
}
#login-btn:hover{
    background-color: #d1ac34 !important;
    border-color: #ffd23f;
}

/* table styling used in features */

.bkt-table-rowhead{
    background-color: #ffd23f;
}

.bkt-table-row{
    border-bottom: 1px #ffd23f solid;
}

.bkt-table-col{
    padding:10px;
    margin:10px;
}

.profile-table-row{
    border-bottom: 1px #ec4e20 solid;
}

.profile-table-col{
    padding:10px;
    margin:10px;

}

@media only screen and (max-width: 600px){
    .bkt-table-col{
    padding:0px;
    }
    .disposable-col{
        display:none;
    }
    input{
    width: 25%;
    }
    textarea{
    width: 50%;
    }
}
/* hover coloring for blog items */

.blog-content-item:hover{
    background-color: rgba(0,0,0,0.2);
    transition-duration: 0.5s;
    
}

/* payment button hover, pointer type and transition features */

#payment{
    color: #ffd23f;
    transition-duration: 0.5s;
    transition-timing-function: ease-in-out;
}
#payment:hover{
    color: #d1ac34 !important;
}

#payment-pointer{
    animation-name: pointing;
    animation-duration: 3s;
    animation-delay: 2s;
    animation-timing-function: ease-in-out;
    animation-iteration-count: 2;
}
@keyframes pointing {
    0% {transform: translateX(0px)}
    25% {transform: translateX(8px)}
    50% {transform: translateX(0px)}
    75% {transform: translateX(8px)}
    100% {transform: translateX(0px)}
}

/* styling for edit profile input fields  */

.edit_profile_box{
    -webkit-appearance: none;
    -moz-appearance: none;
    -ms-appearance: none;
    -o-appearance: none;
    background-color: transparent;
    box-shadow: none; 
    border: none;
    color: white;
}

/* profile editing buttons hover and transition features */

.update-button{
    background-color: transparent;
    border: 1px #ffd23f solid;
    color: #ffd23f;
    padding: 0.3em;
    border-radius: 3px;
}

.update-button:hover{
    background-color: black ;
}

/* forms page centralising styling */

input{
    width: 50%;
}

textarea{
    width: 50%;
}

.profile-table-row td :empty::after{
    content: "\00a0";
}

.profile-edit-col{
    border-bottom: 1px #ffd23f solid;
    padding-bottom: 10px;
    font-size: 1.3em !important;
}

/* upload photo button styling */
#upload_button{
    color: black;
}


/* animation for basket payment button icon*/

@keyframes uploadpointing{
    0% {transform: translateX(60px)}
    25% {transform: translateX(70px)}
    50% {transform: translateX(60px)}
    75% {transform: translateX(70px)}
    100% {transform: translateX(60px)}
}

/* media query for order history border-bottom to disappear to have better rearrangement of transaction history items on smaller screens */
@media only screen and (max-width: 570px){
    #transaction_number_display{
        border-bottom: 1px transparent solid !important;
    }
}

/* adding mobile responsiveness to blog page so the flex direction changes to column instead*/

@media only screen and (max-width: 900px){
    .about-us-mobile-responsive{
        flex-direction:column;
        flex-wrap:wrap-reverse;
        align-items: center;
    }
}


/*body margin and padding to zero to accommodate the maps*/
body { 
    margin: 0; 
    padding: 0; 
    
}

.marker{
    background-image: url("/static/images/marker.png");
    background-size: cover;
    width: 40px;
    height: 40px;
}

/* animated button for scrolling to packages on the shop page*/

a.button {
  position: relative;
  display: inline-block;
  width: 25.6em;
  height: 6.3em;
  overflow: hidden;
  vertical-align: middle;
  text-align: left;
  text-decoration: none;
  line-height: 3em;
  font-size: 1rem;
  color: #ec4e20;
  cursor: pointer;
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  transition: -webkit-transform 0.5s;
  transition: transform 0.5s;
  transition: transform 0.5s, -webkit-transform 0.5s;
}
a.button svg {
  z-index: 1;
  position: absolute;
  top: 0;
  left: 0;
}
a.button svg g line,
a.button svg g polyline,
a.button svg g circle {
  fill: none;
  stroke: #ec4e20;
}
a.button svg g line,
a.button svg g polyline {
  stroke-miterlimit: 10;
}
a.button svg g circle {
  display: block;
  stroke-linecap: round;
  stroke-linejoin: round;
  stroke-width: 0.066em;
  stroke-dasharray: 200;
  stroke-dashoffset: 0;
  transition: stroke-dashoffset ease-out 0.5s;
}
a.button font {
  z-index: 2;
  position: relative;
  display: inline-block;
  text-transform: uppercase;
  font-family: "Roboto", Helvetica, Arial, sans-serif;
  font-size: 1.5em;
}
a.button:hover {
  -webkit-transform: translateZ(0) translateX(0.5em);
          transform: translateZ(0) translateX(0.5em);
}
a.button:hover svg g circle {
  stroke-dashoffset: 200;
}

